Map now has some example Bartsy Points with hardcoded number of people present.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@4 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="config_user_info">user_account_info</string>
     <string name="config_user_location">user_location</string>
     <string name="config_user_description">user_description</string>
-    <string name="config_venue_channel_name">Areal</string>
+    <string name="config_venue_channel_name">Venue</string>
     
     
     <!-- Action bar items -->
