--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="title_debug">Debug</string>
     <string name="title_people">People</string>
     <string name="title_drinks">Drinks</string>
-    <string name="title_drink_orders">Orders</string>
+    <string name="title_drink_orders">Orders (0)</string>
     <string name="title_inventory">Inventory</string>
     
     <!--  P2P -->
