Added card.io to the credit card button.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@47 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="config_user_location">user_location</string>
     <string name="config_user_description">user_description</string>
     <string name="config_venue_channel_name">Venue</string>
+    <string name="config_cardio_token">0f13c2616ead46e7a000674d20743cfe</string>
     
     
     <!-- Action bar items -->
