--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string name="app_name">Bartsy</string>
-    
-    <!--  Config items -->
+
+    <!-- Config items -->
     <string name="config_shared_preferences_name">bartsy_preferences</string>
     <string name="config_user_profile_picture">user_profile_picture</string>
     <string name="config_user_account_name">user_account_name</string>
@@ -13,46 +13,48 @@
     <string name="config_user_description">user_description</string>
     <string name="config_venue_channel_name">Venue</string>
     <string name="config_cardio_token">0f13c2616ead46e7a000674d20743cfe</string>
-    <string  name="bartsyUserId">bartsyUserId</string>
-    
+    <string name="bartsyUserId">bartsyUserId</string>
+    <string name="venueId">venueId</string>
+    <string name="venueName">venueName</string>
+
     <!-- Action bar items -->
-    
+
     <string name="action_status">Status:</string>
     <string name="action_venue">Searching...</string>
-    <string name="action_settings">Settings</string> 
+    <string name="action_settings">Settings</string>
     <string name="alternate_title">An alternate title that is long</string>
     <string name="toggle_title">Toggle title</string>
     <string name="menu_refresh">Refresh</string>
     <string name="menu_search">Search</string>
-    <string name="menu_share">Share</string>        
+    <string name="menu_share">Share</string>
     <string name="settings">Settings</string>
     <string name="refresh">Refresh</string>
     <string name="action_quit">Quit</string>
-    
-    <!--  NetworkActivity -->
-    
+
+    <!-- NetworkActivity -->
+
     <string name="page_title">Newest StackOverflow questions tagged \'android\'</string>
     <string name="updated">Last updated:</string>
     <string name="lost_connection">Lost connection.</string>
     <string name="wifi_connected">Wi-Fi reconnected.</string>
     <string name="connection_error">Unable to load content. Check your network connection.</string>
     <string name="xml_error">Error parsing XML.</string>
-    
-    <!--  Tabs -->
-    
+
+    <!-- Tabs -->
+
     <string name="title_people">People</string>
     <string name="title_drinks">Drinks</string>
     <string name="title_drink_orders">Orders (0)</string>
-    
-    <!--  P2P -->
-    
+
+    <!-- P2P -->
+
     <string name="finding_service">Finding local services</string>
     <string name="btn_send">Send</string>
     <string name="txt_hint">Type Message</string>
     <string name="wifidirect_port">Type Message</string>
-    
-    <!--  Contacts -->
-    
+
+    <!-- Contacts -->
+
     <string name="get_contacts">Get Contacts List</string>
     <string name="update_contacts">Update Contacts List</string>
     <string name="label_name">Name</string>
@@ -62,39 +64,41 @@
     <string name="contact_phone_number">unknown</string>
     <string name="contact_email">unknow</string>
     <string name="contact_dialog_title">Contact Details:</string>
+
     <string-array name="phone_types">
-    	<item>Custom</item>
-    	<item>Home</item>
-    	<item>Mobile</item>
-    	<item>Work</item>
-    	<item>Fax Work</item>
-    	<item>Fax Home</item>
-    	<item>Pager</item>
-    	<item>Other</item>
-    	<item>CallBack</item>
-    	<item>Car</item>
-    	<item>Company Main</item>
-    	<item>ISDN</item>
-    	<item>Main</item>
-    	<item>Other Fax</item>
-    	<item>Radio</item>
-    	<item>Telex</item>
-    	<item>TTY/TTD</item>
-    	<item>Work Mobile</item>
-    	<item>Work Pager</item>
-    	<item>Assistant</item>
-    	<item>MMS</item>
+        <item>Custom</item>
+        <item>Home</item>
+        <item>Mobile</item>
+        <item>Work</item>
+        <item>Fax Work</item>
+        <item>Fax Home</item>
+        <item>Pager</item>
+        <item>Other</item>
+        <item>CallBack</item>
+        <item>Car</item>
+        <item>Company Main</item>
+        <item>ISDN</item>
+        <item>Main</item>
+        <item>Other Fax</item>
+        <item>Radio</item>
+        <item>Telex</item>
+        <item>TTY/TTD</item>
+        <item>Work Mobile</item>
+        <item>Work Pager</item>
+        <item>Assistant</item>
+        <item>MMS</item>
     </string-array>
     <string-array name="email_types">
-    	<item>Custom</item>
-    	<item>Home</item>
-    	<item>Work</item>
-    	<item>Other</item>
-    	<item>Mobile</item>
+        <item>Custom</item>
+        <item>Home</item>
+        <item>Work</item>
+        <item>Other</item>
+        <item>Mobile</item>
     </string-array>
+
     <string name="hello">This is a AllJoyn service that provides access to this devices contact information for an AllJoyn Client.</string>
-    
-     <!--GCM  -->
+
+    <!-- GCM -->
     <string name="error_config">Please set the %1$s constant and recompile the app.</string>
     <string name="already_registered">Device is already registered on server.</string>
     <string name="gcm_registered">From GCM: device successfully registered!</string>
@@ -112,5 +116,5 @@
     <string name="options_unregister">Unregister</string>
     <string name="options_clear">Clear</string>
     <string name="options_exit">Exit</string>
-    
+
 </resources>
