--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -116,5 +116,8 @@
     <string name="options_unregister">Unregister</string>
     <string name="options_clear">Clear</string>
     <string name="options_exit">Exit</string>
+    
+    <!-- Drinks -->
+    <string name="customDrinkLabel">Custom Drinks</string>
 
 </resources>
