Changed saveProfileSyscall and other structures to use login/password instead of BartsyId and cleaned up profile code.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@198 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,13 +5,16 @@
 
     <!-- Config items -->
     <string name="config_shared_preferences_name">bartsy_preferences</string>
-    <string name="config_user_bartsyID">bartsyUserId</string>
+
+    <string name="config_user_login">bartsyUserLogin</string>
+    <string name="config_user_password">bartsyUserLogin</string>
+    
+    <string name="config_user_bartsyId">bartsyUserId</string>
 	<string name="config_user_profile_picture">user_profile_picture</string>
     <string name="config_user_account_name">user_account_name</string>
-    <string name="config_user_name">user_name</string>
-    <string name="config_user_info">user_account_info</string>
-    <string name="config_user_location">user_location</string>
+    <string name="config_user_nickname">user_name</string>
     <string name="config_user_description">user_description</string>
+    
     <string name="config_venue_channel_name">Venue</string>
     <string name="config_cardio_token">0f13c2616ead46e7a000674d20743cfe</string>
     <string name="venueId">venueId</string>
