--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,9 +8,15 @@
 
     <string name="config_user_login">bartsyUserLogin</string>
     <string name="config_user_password">bartsyUserLogin</string>
-    
     <string name="config_user_bartsyId">bartsyUserId</string>
-	<string name="config_user_profile_picture">user_profile_picture</string>
+    
+    <string name="config_facebook_username">facebookUsername</string>
+    <string name="config_facebook_id">facebookId</string>
+  
+    <string name="config_google_username">googleUsername</string>
+    <string name="config_google_id">googleId</string>
+    
+    <string name="config_user_profile_picture">user_profile_picture</string>
     <string name="config_user_account_name">user_account_name</string>
     <string name="config_user_nickname">user_name</string>
     <string name="config_user_description">user_description</string>
