--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="config_shared_preferences_name">bartsy_preferences</string>
 
     <string name="config_user_login">bartsyUserLogin</string>
-    <string name="config_user_password">bartsyUserLogin</string>
+    <string name="config_user_password">bartsyUserPassword</string>
     <string name="config_user_bartsyId">bartsyUserId</string>
     
     <string name="config_facebook_username">facebookUsername</string>
@@ -16,16 +16,19 @@
     <string name="config_google_username">googleUsername</string>
     <string name="config_google_id">googleId</string>
     
-    <string name="config_user_profile_picture">user_profile_picture</string>
-    <string name="config_user_account_name">user_account_name</string>
     <string name="config_user_nickname">user_name</string>
-    <string name="config_user_description">user_description</string>
+    
+    <string name="config_user_image_path">user_description</string>
+    <string name="config_user_profile_picture">user_profile_picture</string>
     
     <string name="config_venue_channel_name">Venue</string>
     <string name="config_cardio_token">0f13c2616ead46e7a000674d20743cfe</string>
+
     <string name="venueId">venueId</string>
     <string name="venueName">venueName</string>
-
+    <string name="venueOrderCount">venueOrderCount</string>
+    <string name="venueUserCount">venueUserCount</string>
+    
     <!-- Action bar items -->
 
     <string name="action_status">Status:</string>
