New Facebook SDK integrated
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@232 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <string name="app_name">Bartsy</string>
+    
+    <!-- Facebook ID -->
+    <string name="fb_app_id">381352825303290</string>
 
     <!-- Config items -->
     <string name="config_shared_preferences_name">bartsy_preferences</string>
