Some major UI changes to make things more consistent with Android design and future UI: * Order dialog * People list * Open orders UI upgraded * Other
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@256 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,7 +29,6 @@
 
     <string name="venueId">venueId</string>
     <string name="venueName">venueName</string>
-    <string name="venueOrderCount">venueOrderCount</string>
     <string name="venueUserCount">venueUserCount</string>
     
     <!-- Action bar items -->
@@ -58,9 +57,10 @@
     <!-- Tabs -->
 
     <string name="title_people">People</string>
-    <string name="title_drinks">Drinks</string>
-    <string name="title_drink_orders">Orders (0)</string>
-
+    <string name="title_menu">Menu</string>
+    <string name="title_orders">Orders</string>
+    <string name="title_past_orders">Past orders</string>
+    
     <!-- P2P -->
 
     <string name="finding_service">Finding local services</string>
