--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Bartsy</string>
+    <string name="app_name">Bartsy Alpha</string>
     
     <!-- Facebook ID -->
     <string name="fb_app_id">451948571568667</string>
