Use tax rate provided by the venue configuration instead of the hard-coded default.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@353 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,9 +35,7 @@
     <string name="config_venue_channel_name">Venue</string>
     <string name="config_cardio_token">0f13c2616ead46e7a000674d20743cfe</string>
 
-    <string name="venueId">venueId</string>
-    <string name="venueName">venueName</string>
-    <string name="venueUserCount">venueUserCount</string>
+    <string name="prefs_venue">prefs_venue</string>
     
     <!-- Action bar items -->
 
