Renamed several layout xml files for consistency
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@370 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Bartsy Alpha</string>
+    <string name="app_name">Bartsy Beta</string>
+    <string name="app_version">Beta</string>
     
     <!-- Facebook ID -->
     <string name="fb_app_id">451948571568667</string>
