--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Bartsy Beta</string>
-    <string name="app_version">Beta</string>
+    <string name="app_version">0.9.2 - 8/14/2013</string>
     
     <!-- Facebook ID -->
     <string name="fb_app_id">451948571568667</string>
