Added field for facebook friends list preference value.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@476 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
     
     <string name="config_facebook_username">facebookUsername</string>
     <string name="config_facebook_id">facebookId</string>
+    
   
     <string name="config_google_username">googleUsername</string>
     <string name="config_google_id">googleId</string>
@@ -41,6 +42,8 @@
     <string name="ItemOptionsActivity_input_status">ItemOptionsActivity_input_status</string>
     
     <string name="prefs_venue">prefs_venue</string>
+    
+    <string name="prefs_facebook_friends">prefs_facebook_friends</string>
     
     <!-- Action bar items -->
 
